# kiran-calculator

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.en.md  README.md  main.cpp
core/: evaluator.cpp  evaluator.h  opcode.h
data/: config.h.in  kiran-calculator.desktop.in
gui/: calculator.cpp  calculator.h  calculator.ui  general-enum.h  history-recoder.cpp  history-recoder.h  keys-page.h  sselection.h  stage-page.cpp  stage-page.h  utils.cpp  utils.h  window.cpp  window.h  window.ui
gui/mode-switcher-page/: mode-list.cpp  mode-list.h  mode-switcher-page.cpp  mode-switcher-page.h  mode-switcher-page.ui  test.h
gui/programmer-mode-page/: num-conversion-delegate.cpp  num-conversion-delegate.h  num-conversion.cpp  num-conversion.h  programmer-expr-calculator.cpp  programmer-expr-calculator.h  programmer-keys-page.cpp  programmer-keys-page.h  programmer-mode-page.cpp  programmer-mode-page.h  programmer-mode-page.ui
gui/science-mode-page/: science-expr-calculator.cpp  science-expr-calculator.h  science-keys-page.cpp  science-keys-page.h  science-mode-page.cpp  science-mode-page.h  science-mode-page.ui
gui/standard-mode-page/: expr-calculator.cpp  expr-calculator.h  standard-keys-page.cpp  standard-keys-page.h  standard-mode-page.cpp  standard-mode-page.h  standard-mode-page.ui
math/: cmath.h  floatio.c  quantity.cpp  quantity.h
resources/: kiran-calculator-resources.qrc
resources/kiran-calculator-themes/: black_theme.qss  light_theme.qss
src/: main.cpp
src/core/: evaluator.cpp  functions.cpp  session.cpp  settings.cpp
src/gui/: animation-click-button.cpp  animation-click-button.h  calculator.cpp  calculator.h  calculator.ui  expr-calculator.cpp  expr-calculator.h  history-recoder.cpp  history-recoder.h  keys-page.h  mode-selection.cpp  mode-selection.h  stage-page.cpp  stage-page.h  utils.cpp  utils.h
src/gui/mode-switcher-page/: mode-list.cpp  mode-list.h  mode-switcher-page.cpp  mode-switcher-page.h  mode-switcher-page.ui
src/gui/programmer-mode-page/: num-conversion-delegate.cpp  num-conversion-delegate.h  num-conversion.cpp  num-conversion.h  programmer-expr-calculator.cpp  programmer-expr-calculator.h  programmer-keys-page.cpp  programmer-keys-page.h  programmer-mode-page.cpp  programmer-mode-page.h  programmer-mode-page.ui
src/gui/science-mode-page/: science-expr-calculator.cpp  science-expr-calculator.h  science-keys-page.cpp  science-keys-page.h  science-mode-page.cpp  science-mode-page.h  science-mode-page.ui
src/gui/standard-mode-page/: standard-expr-calculator.cpp  standard-expr-calculator.h  standard-keys-page.cpp  standard-keys-page.h  standard-mode-page.cpp  standard-mode-page.h  standard-mode-page.ui
src/math/: cmath.cpp  floatconvert.h  floatio.h  hmath.cpp  hmath.h  quantity.cpp
translations/: kiran-calculator.bo_CN.ts  kiran-calculator.kk_KG.ts  kiran-calculator.kk_KZ.ts  kiran-calculator.mn_MN.ts  kiran-calculator.ug_CN.ts  kiran-calculator.zh_CN.ts
